Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: end-end
        image: hasanabdirahman/end-end:v1 
        ports:
        - containerPort: 80
    
      imagePullRequest:
        - name:
