Kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: end-end
  name: end-to-end-service
spec:
  selector:
    app: end-to-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
